--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Digital Money Index</title>
   </head>
   <body class="w-full h-full">
-    <div class="w-full h-full min-w-[340px] p-3" id="root"></div>
+    <div class="w-full h-full min-w-[340px]" id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
