--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Digital Money Index</title>
   </head>
-  <body class="w-full h-full">
+  <body class="w-full h-full overscroll-none">
     <div class="w-full h-full min-w-[340px]" id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
