--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html class="scroll-smooth h-full w-full" lang="en">
+<html class="scroll-smooth w-full" lang="en">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
@@ -7,7 +7,7 @@
     <title>Digital Money Index</title>
   </head>
   <body class="w-full h-full overscroll-none">
-    <div class="w-full h-full min-w-[340px]" id="root"></div>
+    <div class="w-full h-full min-w-[340px] bg-background md:px-5" id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
