--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html class="scroll-smooth w-full" lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/icbs-logo-footer.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Digital Money Index</title>
   </head>
