Latest commit with full stop

--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
   <body class="w-full h-full overscroll-none">
     <div class="w-full h-full min-w-[340px] bg-background md:px-5" id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
+    <!-- Empty line -->
   </body>
 </html>
